enhance user-org relationship (#18)
* enhance user-org relationship

* remove duplicate endpoint

* update seed script
